[package]

name = "gfx_debug_draw"
version = "0.29.0"
authors = ["Steve Jahns <s.t.jahns@gmail.com>"]
keywords = ["draw", "gfx", "debug", "piston"]
description = "Debug rendering library for gfx-rs"
license = "MIT"
readme = "README.md"
repository = "https://github.com/PistonDevelopers/gfx-debug-draw"
homepage = "https://github.com/PistonDevelopers/gfx-debug-draw"

[lib]

name = "gfx_debug_draw"
path = "src/lib.rs"

[dependencies]

gfx = "0.18.1"
gfx_text = "0.29.0"
vecmath = "1.0.0"

###### For example ###########################

[dev-dependencies]

piston = "0.53.1"
piston_window = "0.121.0"
sdl2 = "0.34.0"
pistoncore-sdl2_window = "0.67.0"
gfx_device_gl = "0.16.2"
shader_version = "0.7.0"
camera_controllers = "0.32.0"
current = "0.1.2"

###############################################
